[tool.poetry]
name = "react-langchain"
version = "0.1.0"
description = ""
authors = ["oggymishra <ms.sourabh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.15"
requests = "^2.32.3"
langchain-openai = "^0.3.1"
langchain-community = "^0.3.15"
langchainhub = "^0.1.21"
black = "^24.10.0"
python-dotenv = "^1.0.1"
langchain-google-genai = "^2.0.9"
langchain-ollama = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

